--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintVertical_bias="0.793"
-                    android:scrollbars="none" android:id="@+id/horizontalScrollView">
+                    android:scrollbars="none"
+                    android:id="@+id/horizontalScrollView">
 
                 <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -49,7 +50,8 @@
                         app:layout_constraintTop_toTopOf="@+id/map_fragment"
                         app:layout_constraintVertical_bias="0.8"
                         app:layout_constraintStart_toStartOf="@+id/map_fragment"
-                        app:layout_constraintEnd_toEndOf="@+id/map_fragment" android:layout_marginBottom="16dp">
+                        app:layout_constraintEnd_toEndOf="@+id/map_fragment"
+                        android:layout_marginBottom="16dp">
 
                     <Button
                             android:layout_width="105dp"
@@ -103,54 +105,64 @@
                             android:layout_marginStart="8dp"/>
                 </android.support.constraint.ConstraintLayout>
             </HorizontalScrollView>
-            <android.support.v7.widget.CardView
-                    app:cardCornerRadius="30dp"
+
+            <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraint_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    tools:ignore="MissingConstraints"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/cardView">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
 
-                <LinearLayout
+                <android.support.v7.widget.CardView
+                        app:cardCornerRadius="30dp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:layout_height="50dp"
+                        tools:ignore="MissingConstraints"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/cardView">
 
-                    <ImageView
-                            android:id="@+id/back_iv"
-                            android:src="@drawable/ic_search_black_24dp"
-                            android:layout_width="50dp"
-                            android:layout_height="30dp"
-                            android:layout_marginTop="12dp"
-                            android:layout_weight="1"/>
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                    <TextView
-                            android:id="@+id/search"
-                            android:layout_width="292dp"
-                            android:layout_height="50dp"
-                            android:layout_marginTop="12dp"
-                            android:layout_weight="1"
-                            android:hint="What do you need?"
-                            android:textSize="20sp"
-                            android:layout_gravity="center"
-                            android:textColor="#665E5E"/>
+                        <ImageView
+                                android:id="@+id/search_iv"
+                                android:src="@drawable/ic_search_black_24dp"
+                                android:layout_width="50dp"
+                                android:layout_height="30dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_weight="1"/>
 
-                    <ImageView
-                            android:id="@+id/refresh"
-                            android:src="@drawable/ic_refresh_black_24dp"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginRight="6dp"
-                            android:layout_marginTop="12dp"
-                            android:layout_weight="1"/>
-                </LinearLayout>
+                        <TextView
+                                android:id="@+id/search_tv"
+                                android:layout_width="292dp"
+                                android:layout_height="50dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_weight="1"
+                                android:hint="What do you need?"
+                                android:textSize="20sp"
+                                android:layout_gravity="center"
+                                android:textColor="#665E5E"/>
 
-            </android.support.v7.widget.CardView>
+                        <ImageView
+                                android:id="@+id/refresh_iv"
+                                android:src="@drawable/ic_refresh_black_24dp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginRight="6dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_weight="1"/>
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+            </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
 
     <include layout="@layout/bank_list"/>
