--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<android.support.constraint.ConstraintLayout
         android:id="@+id/bottom_sheet"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +8,8 @@
         app:behavior_peekHeight="150dp"
         app:behavior_hideable="true"
         android:orientation="vertical"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        xmlns:tools="http://schemas.android.com/tools">
 
 <android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,19 +18,71 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-<LinearLayout
+<android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-                android:nestedScrollingEnabled="false"
-                android:scrollbarAlwaysDrawVerticalTrack="true"
-                android:id="@+id/bank_recyclerview"
+    <android.support.v7.widget.CardView
+            android:visibility="gone"
+            app:cardCornerRadius="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            tools:ignore="MissingConstraints"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/cardView">
+
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"/>
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/search_iv_list"
+                    android:src="@drawable/ic_search_black_24dp"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_weight="1"/>
+
+            <TextView
+                    android:id="@+id/search_tv_list"
+                    android:layout_width="292dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_weight="1"
+                    android:hint="What do you need?"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:textColor="#665E5E"/>
+
+            <ImageView
+                    android:id="@+id/refresh_iv_list"
+                    android:src="@drawable/ic_refresh_black_24dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_weight="1"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.RecyclerView
+            android:nestedScrollingEnabled="false"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:id="@+id/bank_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="600dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
