--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -8,7 +8,6 @@
         android:layout_height="match_parent"
         android:background="#fff"
         app:behavior_peekHeight="150dp"
-        android:maxHeight="670dp"
         app:behavior_hideable="true"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
@@ -33,7 +32,7 @@
 
             <android.support.v7.widget.CardView
                     android:visibility="gone"
-                    app:cardCornerRadius="40dp"
+                    app:cardCornerRadius="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     tools:ignore="MissingConstraints"
@@ -51,29 +50,31 @@
                         android:orientation="horizontal">
 
                     <ImageView
-                            android:id="@+id/back_iv"
+                            android:id="@+id/search_iv_currency"
                             android:src="@drawable/ic_search_black_24dp"
                             android:layout_width="50dp"
                             android:layout_height="30dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="12dp"
                             android:layout_weight="1"/>
 
-                    <EditText
-                            android:id="@+id/search"
+                    <TextView
+                            android:id="@+id/search_currency"
                             android:layout_width="292dp"
                             android:layout_height="50dp"
+                            android:layout_marginTop="12dp"
                             android:layout_weight="1"
                             android:hint="What do you need?"
+                            android:textSize="20sp"
                             android:layout_gravity="center"
                             android:textColor="#665E5E"/>
 
                     <ImageView
-                            android:id="@+id/refresh"
+                            android:id="@+id/refresh_iv_currency"
                             android:src="@drawable/ic_refresh_black_24dp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_marginRight="6dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="12dp"
                             android:layout_weight="1"/>
                 </LinearLayout>
 
@@ -435,3 +436,5 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
+
+        <!-- android:maxHeight="670dp"-->
