--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -77,7 +77,7 @@
             android:scrollbarAlwaysDrawVerticalTrack="true"
             android:id="@+id/bank_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
