--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="160dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"/>
         <TextView
-                android:text="Version 2.0.0"
+                android:text="Version 2.1.0"
                 android:textColor="#0054A6"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
@@ -45,13 +45,14 @@
         <TextView
                 android:text="KBZ Connect"
                 android:textColor="#0054A6"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2" android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.411"/>
+                app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="4dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
