--- a/app/src/main/res/layout/currency_reverse_list_item.xml
+++ b/app/src/main/res/layout/currency_reverse_list_item.xml
@@ -16,10 +16,8 @@
             app:srcCompat="@drawable/kbzconnect"
             android:id="@+id/service_iv"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:text="TextView"
             android:maxLines="3"
@@ -28,23 +26,22 @@
             android:layout_height="wrap_content"
             android:id="@+id/service_desc_tv"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/service_iv"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.058"
-            app:layout_constraintTop_toBottomOf="@+id/service_title_tv" android:layout_marginTop="8dp"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/service_iv"
+            app:layout_constraintTop_toBottomOf="@+id/service_title_tv" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:text="learn more"
             android:layout_width="100dp"
             android:layout_height="22dp"
-            android:layout_marginRight="32dp"
             android:id="@+id/textView12"
             android:textColor="#0054A6"
-            app:layout_constraintTop_toBottomOf="@+id/service_desc_tv"
-            app:layout_constraintStart_toStartOf="@+id/service_desc_tv"
-            app:layout_constraintEnd_toEndOf="@+id/service_desc_tv"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"
+            app:layout_constraintEnd_toStartOf="@+id/service_iv"
+            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/service_desc_tv"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
             android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
@@ -53,11 +50,9 @@
             android:id="@+id/service_title_tv"
             android:textSize="20sp"
             android:textColor="#000"
-            app:layout_constraintTop_toTopOf="@+id/service_iv"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toEndOf="@+id/service_iv"
-            android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.058"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/service_iv"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/service_iv"
             android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
