--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -108,7 +108,7 @@
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                     android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                     android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/detail_tv"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_tv"
                     app:layout_constraintVertical_bias="0.0">
 
                 <ImageView
@@ -125,7 +125,7 @@
                         app:layout_constraintVertical_bias="0.166"/>
 
                 <TextView
-                        android:text="Find your nearest exchange"
+                        android:text="Find your nearest branch"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:textColor="#000"
