--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,6 +163,16 @@
 
                 </android.support.v7.widget.CardView>
             </android.support.constraint.ConstraintLayout>
+            <ImageView
+                    android:visibility="gone"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    app:srcCompat="@drawable/ic_clear_black_24dp"
+                    android:id="@+id/clear_iv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="16dp"/>
         </android.support.constraint.ConstraintLayout>
 
     <include layout="@layout/bank_list"/>
