--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -52,6 +52,7 @@
                             android:layout_margin="15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:singleLine="true"
                             android:layout_weight="1"
                             android:text="THINGANGYUN(2)"
                             android:textSize="20sp"/>
