--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,53 +55,50 @@
 
                     <Button
                             android:layout_width="105dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:background="@drawable/unselected_button_shape"
                             android:text="BRANCH"
                             android:drawableLeft="@drawable/ic_branch_24dp"
                             android:id="@+id/branch_btn"
-                            app:layout_constraintBaseline_toBaselineOf="@+id/atm_btn"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/atm_btn"
-                            android:layout_marginStart="8dp"/>
+                            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    />
 
                     <Button
                             android:layout_width="79dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:background="@drawable/unselected_button_shape"
                             android:text="ATM"
                             android:drawableLeft="@drawable/ic_atm_24dp"
                             android:id="@+id/atm_btn"
-                            app:layout_constraintBaseline_toBaselineOf="@+id/agent_btn"
                             app:layout_constraintStart_toEndOf="@+id/branch_btn"
                             app:layout_constraintEnd_toStartOf="@+id/agent_btn"
-                            android:layout_marginStart="8dp"/>
+                            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    />
 
                     <Button
                             android:layout_width="95dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:background="@drawable/unselected_button_shape"
                             android:text="AGENT"
                             android:drawableLeft="@drawable/ic_agent_24dp"
                             android:id="@+id/agent_btn"
-                            app:layout_constraintBaseline_toBaselineOf="@+id/merchant_btn"
-                            app:layout_constraintTop_toTopOf="@+id/atm_btn"
                             app:layout_constraintStart_toEndOf="@+id/atm_btn"
                             app:layout_constraintEnd_toStartOf="@+id/merchant_btn"
-                            android:layout_marginTop="324dp"
-                            android:layout_marginStart="8dp"/>
+                            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    />
 
                     <Button
                             android:layout_width="125dp"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:background="@drawable/unselected_button_shape"
                             android:text="MERCHANT"
                             android:drawableLeft="@drawable/ic_merchant_24dp"
                             android:id="@+id/merchant_btn"
-                            app:layout_constraintTop_toTopOf="@+id/agent_btn"
                             app:layout_constraintStart_toEndOf="@+id/agent_btn"
-                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="368dp"
-                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.084"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_marginStart="8dp"/>
                 </android.support.constraint.ConstraintLayout>
             </HorizontalScrollView>
@@ -115,9 +112,9 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
                 <android.support.v7.widget.CardView
-                        app:cardCornerRadius="30dp"
+                        app:cardCornerRadius="15dp"
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         tools:ignore="MissingConstraints"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="8dp"
@@ -129,21 +126,22 @@
 
                     <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
                         <ImageView
                                 android:id="@+id/search_iv"
                                 android:src="@drawable/ic_search_black_24dp"
-                                android:layout_width="50dp"
+                                android:layout_width="30dp"
                                 android:layout_height="30dp"
-                                android:layout_marginTop="12dp"
+                                android:layout_marginTop="8dp"
                                 android:layout_weight="1"/>
 
                         <TextView
                                 android:id="@+id/search_tv"
                                 android:layout_width="292dp"
                                 android:layout_height="50dp"
+                                android:layout_marginLeft="8dp"
                                 android:layout_marginTop="12dp"
                                 android:layout_weight="1"
                                 android:hint="What do you need?"
@@ -154,10 +152,10 @@
                         <ImageView
                                 android:id="@+id/refresh_iv"
                                 android:src="@drawable/ic_refresh_black_24dp"
-                                android:layout_width="30dp"
+                                android:layout_width="20dp"
                                 android:layout_height="30dp"
                                 android:layout_marginRight="6dp"
-                                android:layout_marginTop="12dp"
+                                android:layout_marginTop="8dp"
                                 android:layout_weight="1"/>
                     </LinearLayout>
 
